fix: update finance retrieval to use get(0) instead of getFirst() for consistency